Update AnimeUtil.java